# theseus

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build_and_publish.yml  check_code.yml
examples/: 20newsgroups_clustering.py  imdb_zero_shot.py  russian_toxic_comments.py
scripts/: download_models.py
tests/: not_raises.py  test_augmentations.py  test_utils.py
tests/test_balancing/: dataset.py  test_augmentations.py  test_base.py  test_random.py  test_similarity.py
tests/test_samplers/: dataset.py  test_base.py  test_random.py
tests/test_validators/: setup_class.py  test_number.py  test_one_of.py  test_path.py  test_validator.py
theseus/: __init__.py  _abc.py  _const.py  _inference.py  _mixin.py  _paths.py  accelerator.py  cv.py  defaults.py  exceptions.py  lang_code.py  lang_detection.py  log.py  param_grids.py  random.py  seed.py  stop_words.py  utils.py
theseus/abc/: auto_estimator.py  embeddings_estimator.py
theseus/classification/: _abc.py  _metrics.py  _param_grids.py  _utils.py  auto.py  bert_classifier.py  embeddings.py  fast_text.py  sentence_bert.py  tf_idf.py
theseus/classification/models/: bert.py  bert_classifier.py
theseus/classification/zero_shot/: _classifiers.py  auto.py
theseus/clustering/: _param_grids.py  auto.py  embeddings.py
theseus/dataset/: _const.py  text_dataset.py
theseus/dataset/augmentations/: __init__.py  _abc.py  _models.py  back_translation.py  generation.py  gpt.py  random.py  random_insertion.py  random_replacement.py
theseus/dataset/balancing/: _common.py  _sampler.py  augmentation.py  balancer.py  checkers.py  random.py  sampler_mixin.py  similarity.py  types.py
theseus/dataset/balancing/over_sampling/: random.py
theseus/dataset/balancing/under_sampling/: random.py  similarity.py
theseus/embedders/: bert.py  fast_text.py
theseus/plotting/: classification.py  clustering.py  defaults.py  display.py
theseus/validators/: __init__.py  _validator.py  number.py  one_of.py  path.py
theseus/wrappers/: dense_tf_idf.py  picklable_fast_text.py
theseus/zero_shot/: _classifiers.py  auto.py
