[tool.poetry]
name = "theseus"
version = "0.1.0"
description = ""
authors = ["SN4KEBYTE <timurcat7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
tokenizers = "^0.12.0"
pandas = "^1.4.2"
transformers = "^4.18.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
wemake-python-styleguide = "^0.16.1"
flake8-colors = "^0.1.9"
mypy = "^0.942"

#[[tool.poetry.source]]
#name = "pypi-public"
#url = "https://pypi.org/simple/"
#default = true
#
#[[tool.poetry.source]]
#name = "pytorch"
#url = "https://download.pytorch.org/whl/cpu/"
#secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
force_alphabetical_sort_within_sections = true
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
force_grid_wrap = 2


[tool.mypy]
python_version = 3.8

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
allow_untyped_globals = true
allow_redefinition = true