[tool.poetry]
name = "theseus"
version = "0.1.0"
description = ""
authors = ["SN4KEBYTE <timurcat7@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
tokenizers = "^0.12.0"
pandas = "^1.4.2"
transformers = "^4.18.0"
torch = "^1.11.0"
scipy = "^1.8.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
wemake-python-styleguide = "^0.16.1"
flake8-colors = "^0.1.9"
mypy = "^0.942"
jupyterlab = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
force_alphabetical_sort_within_sections = true
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
force_grid_wrap = 2

[tool.pytest.ini_options]
minversion = 7.0
testpaths = [
    "tests",
    "tests/test_validators",
]
console_output_style = "progress"

[tool.mypy]
python_version = 3.8

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
allow_untyped_globals = true
allow_redefinition = true