[tool.poetry]
name = "theseus"
version = "0.1.0"
description = ""
authors = ["SN4KEBYTE <timurcat7@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
tokenizers = "^0.12.0"
pandas = "^1.4.2"
transformers = "^4.18.0"
torch = "^1.11.0"
scipy = "^1.8.0"
seaborn = "^0.11.2"
fasttext = "^0.9.2"
scikit-learn = "^1.1.1"
pytorch-lightning = "^1.6.2"
catboost = "^1.0.5"
skl2onnx = "^1.11.1"
gensim = "^4.2.0"
compress-fasttext = "^0.1.3"
protobuf = "3.20.1"
pyarrow = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
wemake-python-styleguide = "^0.16.1"
flake8-colors = "^0.1.9"
mypy = "^0.942"
jupyterlab = "^3.3.3"
pytest-assume = "^2.4.3"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
force_alphabetical_sort_within_sections = true
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
force_grid_wrap = 2

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3

[tool.pytest.ini_options]
minversion = 7.0
testpaths = [
    "tests",
    "tests/test_validators",
]
console_output_style = "progress"

[tool.mypy]
python_version = 3.8

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
allow_untyped_globals = true
allow_redefinition = true
overrides = [
    { ignore_missing_imports=true, module="pandas" },
    { ignore_missing_imports=true, module="seaborn" },
    { ignore_missing_imports=true, module="matplotlib" },
    { ignore_missing_imports=true, module="matplotlib.figure" },
    { ignore_missing_imports=true, module="fasttext" },
    { ignore_missing_imports=true, module="sklearn.base" },
    { ignore_missing_imports=true, module="sklearn.ensemble" },
    { ignore_missing_imports=true, module="sklearn.exceptions" },
    { ignore_missing_imports=true, module="sklearn.linear_model" },
    { ignore_missing_imports=true, module="sklearn.model_selection" },
    { ignore_missing_imports=true, module="sklearn.naive_bayes" },
    { ignore_missing_imports=true, module="sklearn.neighbors" },
    { ignore_missing_imports=true, module="sklearn.preprocessing" },
    { ignore_missing_imports=true, module="sklearn.utils.class_weight" },
    { ignore_missing_imports=true, module="sklearn.metrics" },
    { ignore_missing_imports=true, module="sklearn.metrics._scorer" },
    { ignore_missing_imports=true, module="sklearn.feature_extraction.text" },
    { ignore_missing_imports=true, module="sklearn.pipeline" },
    { ignore_missing_imports=true, module="yaml" },
    { ignore_missing_imports=true, module="joblib" },
]